10636
I did partly mean "seq?" like that, but I also meant that I don't see it in 2.10.3 or current master. Although I don't know you meant "2.10.3" for the "before" in "before and after".
```scala
% scala3
Welcome to Scala version 2.11.0-20140211-171921-64ad11b49b (Java HotSpot(TM) 64-Bit Server VM, Java 1.7.0_51).
Type in expressions to have them evaluated.
Type :help for more information.

scala> import scala.reflect.runtime.universe._
import scala.reflect.runtime.universe._

scala> def f(s: Symbol) = s.seq.toType
<console>:10: error: value seq is not a member of reflect.runtime.universe.Symbol
       def f(s: Symbol) = s.seq.toType
                            ^

scala> definitions.FunctionClass(1)
res0: reflect.runtime.universe.Symbol = trait Function1

scala> definitions.FunctionClass(1).seq
<console>:11: error: value seq is not a member of reflect.runtime.universe.Symbol
              definitions.FunctionClass(1).seq
                                           ^
```
